# saas-cost-analyzer

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
examples/: generic-invoice-sample.csv  salesforce-sample.csv  slack-sample.csv  snowflake-sample.csv
saas_cost_analyzer/: cli.py
saas_cost_analyzer/analysis/: engine.py
saas_cost_analyzer/providers/: detector.py
tests/: test_saas_cost.py
